# dark-loot-shower

./: .gitignore  README.md  pyproject.toml
notebooks/: annotation-aware-image-cropping.ipynb  extract-health-vials.ipynb  health-vials.ipynb  image-detection-model-tester.ipynb  label-studio-import.ipynb  lower-left-crop.ipynb  test-train-valid-split.ipynb
src/: capture.py  start.py
src/controllers/: game_flow_controller.py
src/handlers/: capture_image_handler.py  game_control_handler.py  infer_image_handler.py
src/inference/: image_classification_inference.py
src/utilities/: config.py  image.py  input_capture.py  linux_app.py  macos_app.py  xbox_io.py
tests/: test_shared_object.py  test_thread_safe_deque.py
